<resources>
    <string name="name3_2131165184">Navigate home</string>
    <string name="name3_2131165185">Navigate up</string>
    <string name="name3_2131165186">More options</string>
    <string name="name3_2131165187">Done</string>
    <string name="name3_2131165188">See all</string>
    <string name="name3_2131165189">Choose an app</string>
    <string name="name3_2131165190">Clear query</string>
    <string name="name3_2131165191">Search query</string>
    <string name="name3_2131165192">Search</string>
    <string name="name3_2131165193">Submit query</string>
    <string name="name3_2131165194">Voice search</string>
    <string name="name3_2131165195">Share with</string>
    <string name="name3_2131165196">Share with %s</string>
    <string name="name3_2131165197"><g id="app_name">%1$s</g> requires an update to the Android Wear app.</string>
    <string name="name3_2131165198"><g id="app_name">%1$s</g>" won't run unless you update the Android Wear app."</string>
    <string name="name3_2131165199">Update Android Wear</string>
    <string name="name3_2131165200"><g id="app_name">%1$s</g> requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="name3_2131165201">Enable Google Play services</string>
    <string name="name3_2131165202"><g id="app_name">%1$s</g>" won't work unless you enable Google Play services."</string>
    <string name="name3_2131165203">Enable Google Play services</string>
    <string name="name3_2131165204">Requested by <g id="app_name">%1$s</g></string>
    <string name="name3_2131165205">Get Google Play services</string>
    <string name="name3_2131165206"><g id="app_name">%1$s</g>" won't run without Google Play services, which are missing from your phone."</string>
    <string name="name3_2131165207"><g id="app_name">%1$s</g>" won't run without Google Play services, which are missing from your tablet."</string>
    <string name="name3_2131165208">Get Google Play services</string>
    <string name="name3_2131165209">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="name3_2131165210">Invalid Account</string>
    <string name="name3_2131165211">An application requires Google Play services to be enabled.</string>
    <string name="name3_2131165212">A data connection is required to connect to Google Play services.</string>
    <string name="name3_2131165213">Network Error</string>
    <string name="name3_2131165214">An application requires an update for Google Play services.</string>
    <string name="name3_2131165215">Google Play services error</string>
    <string name="name3_2131165216">Error signing in the specified account. Please choose a different account.</string>
    <string name="name3_2131165217">Sign in failed</string>
    <string name="name3_2131165218">Unknown issue with Google Play services.</string>
    <string name="name3_2131165219"><g id="app_name">%1$s</g> relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="name3_2131165220">Google Play services</string>
    <string name="name3_2131165221">Update</string>
    <string name="name3_2131165222"><g id="app_name">%1$s</g>" won't run unless you update Google Play services."</string>
    <string name="name3_2131165223">Update Google Play services</string>
    <string name="name3_2131165224"><g id="app_name">%1$s</g>" won't run without Google Play services, which are currently updating."</string>
    <string name="name3_2131165225">Google Play services are updating</string>
    <string name="name3_2131165226">Open on phone</string>
    <string name="name3_2131165227">Sign in</string>
    <string name="name3_2131165228">Sign in with Google</string>
    <string name="name3_2131165229">Client Id required</string>
    <string name="name3_2131165230">Client Secret required</string>
    <string name="name3_2131165231">Device Id required</string>
    <string name="name3_2131165232">Invalid argument</string>
    <string name="name3_2131165233">Module not initialized</string>
    <string name="name3_2131165234">Unknown Error</string>
    <string name="name3_2131165235">User cancelled</string>
    <string name="name3_2131165236">User interaction required</string>
    <string name="name3_2131165237">Username and password required</string>
    <string name="name3_2131165238">"Adobe Creative Cloud powers the world's creativity. Developers: add the Creative SDK to your app in minutes."</string>
    <string name="name3_2131165239">A sticker</string>
    <string name="name3_2131165240">Color</string>
    <string name="name3_2131165241">Decrease value</string>
    <string name="name3_2131165242">Flip horizontal</string>
    <string name="name3_2131165243">Flip vertical</string>
    <string name="name3_2131165244">Increase value</string>
    <string name="name3_2131165245">Toggle zoom</string>
    <string name="name3_2131165246">Rotate counter clockwise</string>
    <string name="name3_2131165247">Rotate clockwise</string>
    <string name="name3_2131165248">Size</string>
    <string name="name3_2131165249">"Sorry, there's no application on your device to handle this action. Do you want to download it now from the market?"</string>
    <string name="name3_2131165250">Orientation</string>
    <string name="name3_2131165251">An error occurred</string>
    <string name="name3_2131165252">Apply</string>
    <string name="name3_2131165253">If you have previously logged in with an Adobe ID, sign in to restore synced supplies</string>
    <string name="name3_2131165254">Attention</string>
    <string name="name3_2131165255">Blemish</string>
    <string name="name3_2131165256">Just tap</string>
    <string name="name3_2131165257">Blur</string>
    <string name="name3_2131165258">Frames</string>
    <string name="name3_2131165259">"Install Aviary's free pack of beautiful high resolution frames to get started."</string>
    <string name="name3_2131165260">Brightness</string>
    <string name="name3_2131165261">Can’t undo any more</string>
    <string name="name3_2131165262">Long press on the photo to restore your original image.</string>
    <string name="name3_2131165263">Circle</string>
    <string name="name3_2131165264">Close</string>
    <string name="name3_2131165265">Color Fix</string>
    <string name="name3_2131165266">Eraser</string>
    <string name="name3_2131165267">Free Color</string>
    <string name="name3_2131165268">Smart Color</string>
    <string name="name3_2131165269">Confirm</string>
    <string name="name3_2131165270">Contrast</string>
    <string name="name3_2131165271">Crop</string>
    <string name="name3_2131165272">Custom</string>
    <string name="name3_2131165273">Delete</string>
    <string name="name3_2131165274">Details</string>
    <string name="name3_2131165275">Discard</string>
    <string name="name3_2131165276">Discard Edit?</string>
    <string name="name3_2131165277">Download</string>
    <string name="name3_2131165278">Failed to start download. Please try again later</string>
    <string name="name3_2131165279">Draw</string>
    <string name="name3_2131165280">Edit Bottom Text</string>
    <string name="name3_2131165281">Edit Top Text</string>
    <string name="name3_2131165282">Photo Editor</string>
    <string name="name3_2131165283">Swipe up or down to adjust the intensity</string>
    <string name="name3_2131165284">Applying effects</string>
    <string name="name3_2131165285">Effects</string>
    <string name="name3_2131165286">Enhance</string>
    <string name="name3_2131165287">Food</string>
    <string name="name3_2131165288">Night</string>
    <string name="name3_2131165289">Portrait</string>
    <string name="name3_2131165290">Scenery</string>
    <string name="name3_2131165291">Enter text here</string>
    <string name="name3_2131165292">There was an error downloading the image, please try again later.</string>
    <string name="name3_2131165293">Oops, there was an error while saving the image.</string>
    <string name="name3_2131165294">Featured</string>
    <string name="name3_2131165295">Featured Effects</string>
    <string name="name3_2131165296">Featured Frames</string>
    <string name="name3_2131165297">Featured Overlays</string>
    <string name="name3_2131165298">Featured Stickers</string>
    <string name="name3_2131165299">Feedback</string>
    <string name="name3_2131165300">Have a suggestion to improve this photo editor? Let us know.</string>
    <string name="name3_2131165301">Filters</string>
    <string name="name3_2131165302">Flip</string>
    <string name="name3_2131165303">Free</string>
    <string name="name3_2131165304">Error</string>
    <string name="name3_2131165305">Supplies</string>
    <string name="name3_2131165306">Got it!</string>
    <string name="name3_2131165307">Have an Adobe ID?</string>
    <string name="name3_2131165308">Hi-Def</string>
    <string name="name3_2131165309">Free</string>
    <string name="name3_2131165310">Download failed</string>
    <string name="name3_2131165311">Failed to download the required informations</string>
    <string name="name3_2131165312">Failed to download the previews</string>
    <string name="name3_2131165313">Install</string>
    <string name="name3_2131165314">Installing</string>
    <string name="name3_2131165315">Plugin successfully installed</string>
    <string name="name3_2131165316">Installed</string>
    <string name="name3_2131165317">Installed</string>
    <string name="name3_2131165318">Restore</string>
    <string name="name3_2131165319">Restore All</string>
    <string name="name3_2131165320">Restore All Failed</string>
    <string name="name3_2131165321">Restore All in Progress</string>
    <string name="name3_2131165322">Already purchased? Tap below to restore all your in-app purchases for free.</string>
    <string name="name3_2131165327">Illuminate</string>
    <string name="name3_2131165427">Cancel Upload</string>
    <string name="name3_2131165452">Height</string>
    <string name="name3_2131165455">Modified</string>
    <string name="name3_2131165457">Size</string>
    <string name="name3_2131165458">Uploaded</string>
    <string name="name3_2131165459">Width</string>
    <string name="name3_2131165508">Upload Files</string>
    <string name="name3_2131165509">Take a Photo</string>
    <string name="name3_2131165511">Add Collaborator</string>
    <string name="name3_2131165605">View as List</string>
    <string name="name3_2131165607">Edit</string>
    <string name="name3_2131165608">Sort Alphabetically</string>
    <string name="name3_2131165611">Create New Folder</string>
    <string name="name3_2131165636">Notifications</string>
    <string name="name3_2131165641">Search</string>
    <string name="name3_2131165683">New</string>
    <string name="name3_2131165726">Cancel</string>
    <string name="name3_2131165727">CONTINUE</string>
    <string name="name3_2131165728">"You can use Behance to publish work as part of 
a team, but will lose access to your portfolio 
if you leave your organization"</string>
    <string name="name3_2131165729">"You are currently signed
in with an Enterprise ID"</string>
    <string name="name3_2131165732">Image</string>
    <string name="name3_2131165824">Contains adult content</string>
    <string name="name3_2131165829">Share on Facebook</string>
    <string name="name3_2131165830">Share on Twitter</string>
    <string name="name3_2131165831">SHARE ON:</string>
    <string name="name3_2131165832">Publish</string>
    <string name="name3_2131165833">Back</string>
    <string name="name3_2131165834">Info</string>
    <string name="name3_2131165835">Ask for feedback</string>
    <string name="name3_2131165836">Add Title</string>
    <string name="name3_2131165837">comma, separated, tags</string>
    <string name="name3_2131165838">Loading …</string>
</resources>