<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="name3_16908445" android:orientation="name3_16908461" android:padding="@dimen/name3_2131231285" android:layout_width="name3_16908386" android:layout_height="name3_16908386"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <GridLayout android:background="@drawable/name3_2130837606" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="name3_16908386" android:layout_height="name3_16908386" android:rowCount="5" android:columnCount="2">
        <com.adobe.creativesdk.foundation.internal.utils.CreativeSDKTextView android:id="@id/name3_2131690205" android:text="@string/name3_2131165458" style="@style/AssetFileDetailsText.Left" />
        <com.adobe.creativesdk.foundation.internal.utils.CreativeSDKTextView android:id="@id/name3_2131690206" style="@style/AssetFileDetailsText.Right" />
        <com.adobe.creativesdk.foundation.internal.utils.CreativeSDKTextView android:text="@string/name3_2131165455" style="@style/AssetFileDetailsText.Left" />
        <com.adobe.creativesdk.foundation.internal.utils.CreativeSDKTextView android:id="@id/name3_2131690207" style="@style/AssetFileDetailsText.Right" />
        <com.adobe.creativesdk.foundation.internal.utils.CreativeSDKTextView android:text="@string/name3_2131165457" style="@style/AssetFileDetailsText.Left" />
        <com.adobe.creativesdk.foundation.internal.utils.CreativeSDKTextView android:id="@id/name3_2131690208" style="@style/AssetFileDetailsText.Right" />
        <com.adobe.creativesdk.foundation.internal.utils.CreativeSDKTextView android:id="@id/name3_2131690209" android:text="@string/name3_2131165459" style="@style/AssetFileDetailsText.Left" />
        <com.adobe.creativesdk.foundation.internal.utils.CreativeSDKTextView android:id="@id/name3_2131690210" style="@style/AssetFileDetailsText.Right" />
        <com.adobe.creativesdk.foundation.internal.utils.CreativeSDKTextView android:id="@id/name3_2131690211" android:text="@string/name3_2131165452" style="@style/AssetFileDetailsText.Left" />
        <com.adobe.creativesdk.foundation.internal.utils.CreativeSDKTextView android:id="@id/name3_2131690212" style="@style/AssetFileDetailsText.Right" />
    </GridLayout>
</LinearLayout>