<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="name3_16908461" android:background="@color/name3_2131558486" android:layout_width="name3_16908781" android:layout_height="name3_16908781"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="name3_16908447" android:id="@id/name3_2131690109" android:background="@drawable/name1_2130837630" android:layout_width="name3_16908781" android:layout_height="?android:name3_16843499">
        <RelativeLayout android:id="@id/name3_2131690110" android:layout_width="name3_16908386" android:layout_height="name3_16908781" android:layout_alignParentLeft="true">
            <ImageView android:id="@id/name3_2131690111" android:background="@drawable/name3_2130837679" android:paddingLeft="@dimen/name3_2131230848" android:paddingRight="@dimen/name3_2131230847" android:layout_width="name3_16908386" android:layout_height="name3_16908781" android:src="@drawable/name1_2130837639" android:scaleType="name3_16908445" android:layout_centerVertical="true" android:contentDescription="@string/name3_2131165833" />
            <com.behance.sdk.ui.customviews.BehanceSDKTextView android:textSize="@dimen/name3_2131230880" android:textColor="@color/name3_2131558562" android:id="@id/name3_2131690112" android:paddingRight="10.0dip" android:layout_width="name3_16908386" android:layout_height="name3_16908386" android:text="@string/name3_2131165834" android:layout_toRightOf="@id/name3_2131690111" android:layout_centerVertical="true" />
        </RelativeLayout>
        <com.behance.sdk.ui.customviews.BehanceSDKTextView android:textSize="@dimen/name3_2131230879" android:textColor="@drawable/name3_2130837692" android:gravity="name3_16908447" android:id="@id/name3_2131690113" android:paddingLeft="@dimen/name3_2131231186" android:paddingRight="@dimen/name3_2131231186" android:layout_width="name3_16908386" android:layout_height="name3_16908781" android:text="@string/name3_2131165683" android:layout_alignParentRight="true" />
        <com.behance.sdk.ui.customviews.BehanceSDKTextView android:textSize="@dimen/name3_2131230879" android:textColor="@color/name3_2131558568" android:gravity="name3_16908445" android:id="@id/name3_2131690114" android:background="@drawable/name3_2130837691" android:paddingLeft="14.0dip" android:paddingRight="14.0dip" android:layout_width="name3_16908386" android:layout_height="name3_16908781" android:layout_marginBottom="0.5dip" android:text="@string/name3_2131165832" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <ViewFlipper android:id="@id/name3_2131690115" android:layout_width="name3_16908781" android:layout_height="name3_16908781">
        <ScrollView android:scrollbarStyle="name3_16908738" android:layout_gravity="name3_16908446" android:id="@id/name3_2131690116" android:layout_width="name3_16908781" android:layout_height="name3_16908386">
            <RelativeLayout android:layout_width="name3_16908781" android:layout_height="name3_16908386">
                <LinearLayout android:orientation="name3_16908461" android:id="@id/name3_2131690117" android:paddingLeft="@dimen/name3_2131230854" android:paddingRight="@dimen/name3_2131230855" android:paddingBottom="@dimen/name3_2131231189" android:layout_width="name3_16908781" android:layout_height="name3_16908386">
                    <LinearLayout android:orientation="name3_16908460" android:id="@id/name3_2131690118" android:layout_width="name3_16908781" android:layout_height="name3_16908386" style="@style/BsdkLayoutWithEditTextBackgroundStyle">
                        <ImageView android:id="@id/name3_2131690119" android:layout_width="name3_16908386" android:layout_height="@dimen/name3_2131231198" android:layout_marginLeft="@dimen/name3_2131230860" android:layout_marginTop="@dimen/name3_2131230861" android:layout_marginBottom="@dimen/name3_2131230861" android:scaleType="name3_16908834" android:adjustViewBounds="true" android:contentDescription="@string/name3_2131165732" />
                        <RelativeLayout android:layout_width="name3_16908781" android:layout_height="name3_16908781">
                            <com.behance.sdk.ui.customviews.BehanceSDKEditText android:textSize="@dimen/name3_2131230877" android:textColor="@color/name3_2131558569" android:textColorHint="@color/name3_2131558570" android:id="@id/name3_2131690120" android:background="@null" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="name3_16908781" android:layout_height="name3_16908386" android:layout_marginLeft="@dimen/name3_2131231196" android:hint="@string/name3_2131165836" android:maxLines="1" android:lines="1" android:singleLine="true" android:maxLength="@integer/name3_2131427359" android:layout_centerVertical="true" android:imeOptions="name3_16908442" />
                            <RelativeLayout android:id="@id/name3_2131690121" android:layout_width="name3_16908781" android:layout_height="name3_16908781" android:layout_marginLeft="@dimen/name3_2131231196">
                                <ImageView android:id="@id/name3_2131690122" android:layout_width="name3_16908386" android:layout_height="name3_16908386" android:src="@drawable/name1_2130837666" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/name3_2131165732" />
                                <com.behance.sdk.ui.customviews.BehanceSDKTextView android:textSize="@dimen/name3_2131230877" android:textColor="@color/name3_2131558569" android:textColorHint="@color/name3_2131558570" android:ellipsize="name3_16908393" android:id="@id/name3_2131690123" android:background="@null" android:layout_width="name3_16908781" android:layout_height="name3_16908386" android:layout_marginRight="10.0dip" android:text="@string/name3_2131165838" android:maxLines="2" android:layout_toLeftOf="@id/name3_2131690122" android:layout_centerVertical="true" />
                            </RelativeLayout>
                        </RelativeLayout>
                    </LinearLayout>
                    <com.behance.sdk.ui.customviews.BehanceSDKEditText android:gravity="name3_16908453" android:id="@id/name3_2131690124" android:paddingTop="@dimen/name3_2131231195" android:paddingBottom="@dimen/name3_2131231194" android:layout_width="name3_16908781" android:layout_height="name3_16908386" android:hint="@string/name3_2131165835" android:maxLines="3" android:lines="3" android:maxLength="@integer/name3_2131427358" android:lineSpacingExtra="@dimen/name3_2131231193" android:imeOptions="name3_16908442" style="@style/BsdkPublishWipEditTextStyle" />
                    <com.behance.sdk.ui.customviews.BehanceSDKEditText android:layout_gravity="name3_16908447" android:id="@id/name3_2131690125" android:paddingLeft="@dimen/name3_2131230858" android:paddingTop="@dimen/name3_2131230859" android:paddingBottom="@dimen/name3_2131230857" android:layout_width="name3_16908781" android:layout_height="name3_16908386" android:hint="@string/name3_2131165837" android:singleLine="true" android:drawableLeft="@drawable/name1_2130837656" android:drawablePadding="@dimen/name3_2131231197" android:imeOptions="name3_16908442" style="@style/BsdkPublishWipEditTextStyle" />
                    <RelativeLayout android:id="@id/name3_2131690126" android:paddingTop="@dimen/name3_2131230852" android:paddingBottom="@dimen/name3_2131230851" android:layout_width="name3_16908781" android:layout_height="name3_16908386">
                        <CheckBox android:id="@id/name3_2131690127" android:paddingLeft="@dimen/name3_2131230849" android:paddingRight="@dimen/name3_2131230849" android:layout_width="name3_16908386" android:layout_height="name3_16908386" android:checked="false" android:button="@drawable/name3_2130837688" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                        <com.behance.sdk.ui.customviews.BehanceSDKTextView android:textSize="@dimen/name3_2131230877" android:textColor="@color/name3_2131558569" android:ellipsize="name3_16908393" android:background="@null" android:paddingLeft="@dimen/name3_2131230853" android:layout_width="name3_16908386" android:layout_height="name3_16908386" android:text="@string/name3_2131165824" android:maxLines="1" android:drawableLeft="@drawable/name1_2130837653" android:drawablePadding="@dimen/name3_2131231188" android:layout_toLeftOf="@id/name3_2131690127" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                    </RelativeLayout>
                    <View android:background="@color/name3_2131558401" android:layout_width="name3_16908781" android:layout_height="@dimen/name3_2131231187" android:layout_marginLeft="@dimen/name3_2131230850" android:layout_marginRight="@dimen/name3_2131230850" />
                    <LinearLayout android:orientation="name3_16908460" android:id="@id/name3_2131690128" android:paddingBottom="@dimen/name3_2131231192" android:layout_width="name3_16908781" android:layout_height="name3_16908386" android:layout_marginLeft="@dimen/name3_2131230856" android:layout_marginTop="@dimen/name3_2131231192">
                        <com.behance.sdk.ui.customviews.BehanceSDKTextView android:textSize="@dimen/name3_2131230878" android:textColor="@color/name3_2131558564" android:layout_gravity="name3_16908447" android:layout_width="name3_16908386" android:layout_height="name3_16908386" android:layout_marginRight="@dimen/name3_2131231191" android:text="@string/name3_2131165831" />
                        <ImageView android:layout_gravity="name3_16908447" android:id="@id/name3_2131690129" android:layout_width="name3_16908386" android:layout_height="name3_16908386" android:layout_marginRight="@dimen/name3_2131231190" android:src="@drawable/name1_2130837660" android:scaleType="name3_16908834" android:contentDescription="@string/name3_2131165830" />
                        <ImageView android:layout_gravity="name3_16908447" android:id="@id/name3_2131690130" android:layout_width="name3_16908386" android:layout_height="name3_16908386" android:src="@drawable/name1_2130837658" android:scaleType="name3_16908834" android:contentDescription="@string/name3_2131165829" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:gravity="name3_16908445" android:orientation="name3_16908461" android:id="@id/name3_2131690131" android:background="@color/name3_2131558486" android:visibility="name3_16908732" android:clickable="true" android:layout_width="name3_16908781" android:layout_height="name3_16908781" android:layout_alignTop="@id/name3_2131690117" android:layout_alignBottom="@id/name3_2131690117">
                    <ProgressBar android:layout_width="name3_16908386" android:layout_height="name3_16908386" style="?android:attr/progressBarStyle" />
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
        <RelativeLayout android:layout_gravity="name3_16908446" android:id="@id/name3_2131690132" android:layout_width="name3_16908781" android:layout_height="name3_16908386">
            <ListView android:scrollbarStyle="name3_16908738" android:id="@id/name3_2131690133" android:layout_width="name3_16908781" android:layout_height="name3_16908781" android:divider="@null" />
        </RelativeLayout>
    </ViewFlipper>
</LinearLayout>