<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="name3_16908461" android:background="@color/name3_2131558509" android:layout_width="name3_16908781" android:layout_height="name3_16908781"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:behanceSDK="http://schemas.android.com/apk/com.behance.sdk">
    <include layout="@layout/bsdk_actionbar_custom_publish_project" />
    <LinearLayout android:gravity="name3_16908445" android:orientation="name3_16908461" android:layout_width="name3_16908781" android:layout_height="name3_16908781">
        <ScrollView android:scrollbarStyle="name3_16908736" android:padding="@dimen/name3_2131231126" android:layout_width="name3_16908781" android:layout_height="name3_16908386">
            <LinearLayout android:gravity="name3_16908445" android:layout_gravity="name3_16908446" android:orientation="name3_16908461" android:layout_width="name3_16908386" android:layout_height="name3_16908781">
                <ImageView android:layout_width="name3_16908386" android:layout_height="name3_16908386" android:layout_marginBottom="@dimen/name3_2131230876" android:src="@drawable/name1_2130837664" />
                <com.behance.sdk.ui.customviews.BehanceSDKTextView android:textSize="@dimen/name3_2131230875" android:textColor="@color/name3_2131558515" android:gravity="name3_16908446" android:layout_width="name3_16908386" android:layout_height="name3_16908386" android:layout_marginBottom="@dimen/name3_2131230873" android:text="@string/name3_2131165729" android:lineSpacingExtra="@dimen/name3_2131230874" />
                <com.behance.sdk.ui.customviews.BehanceSDKTextView android:textSize="@dimen/name3_2131230870" android:textColor="@color/name3_2131558511" android:gravity="name3_16908446" android:layout_width="name3_16908386" android:layout_height="name3_16908386" android:layout_marginBottom="@dimen/name3_2131230868" android:text="@string/name3_2131165728" android:lineSpacingExtra="@dimen/name3_2131230869" />
                <com.behance.sdk.ui.customviews.BehanceSDKTextView android:textSize="@dimen/name3_2131230867" android:textColor="@color/name3_2131558514" android:gravity="name3_16908445" android:id="@id/name3_2131690021" android:background="@drawable/name3_2130837683" android:layout_width="name3_16908781" android:layout_height="@dimen/name3_2131230866" android:layout_marginLeft="@dimen/name3_2131230871" android:layout_marginRight="@dimen/name3_2131230871" android:layout_marginBottom="@dimen/name3_2131230872" android:text="@string/name3_2131165727" />
                <com.behance.sdk.ui.customviews.BehanceSDKTextView android:textSize="@dimen/name3_2131230867" android:textColor="@color/name3_2131558510" android:id="@id/name3_2131690022" android:background="@null" android:padding="10.0dip" android:layout_width="name3_16908386" android:layout_height="name3_16908386" android:text="@string/name3_2131165726" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>